<resources>
    <string name="app_name" translatable="false">Favini Wallpaper</string>

    <!-- Canvas Errors -->
    <string name="canvas_error_missing_source_folder">No Images: Set source folder.</string>
    <string name="canvas_error_missing_image">Failed to load image.</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->

    <!-- Grid Preferences -->
    <string name="preferences_grid_title">Grid</string>

    <string name="preferences_grid_width_title">Width</string>
    <string name="preferences_grid_width_summary">Grid width (number of photos).</string>

    <string name="preferences_grid_height_title">Height</string>
    <string name="preferences_grid_height_summary">Grid height (number of photos).</string>

    <!-- Delay Preference -->
    <string name="preferences_delay_title">Page Delay</string>
    <string name="preferences_delay_summary">Time in seconds to display each page for.</string>
    <string name="preferences_source_folder_title">Choose source folder</string>

    <!-- Scale Preference -->
    <string name="preferences_scale_title">Scale type</string>

    <!-- Set Wallpaper Button -->
    <string name="preferences_set_wallpaper_btn">Set as wallpaper</string>
</resources>