<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="source_folder"
        app:title="@string/preferences_source_folder_title" />

    <SeekBarPreference
        android:max="30"
        app:defaultValue="@integer/default_prefs_delay"
        app:key="delay"
        app:min="1"
        app:showSeekBarValue="true"
        app:summary="@string/preferences_delay_summary"
        app:title="@string/preferences_delay_title" />

    <DropDownPreference
        app:key="scale_type"
        app:title="@string/preferences_scale_title"
        app:defaultValue="@string/default_prefs_scale_type"
        app:entries="@array/preferences_scale_mode_entries"
        app:entryValues="@array/preferences_scale_mode_values"
        app:useSimpleSummaryProvider="true"/>

    <PreferenceCategory app:title="@string/preferences_grid_title">

        <SeekBarPreference
            android:max="10"
            app:defaultValue="@integer/default_prefs_grid_width"
            app:key="grid_width"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/preferences_grid_width_summary"
            app:title="@string/preferences_grid_width_title" />

        <SeekBarPreference
            android:max="10"
            app:defaultValue="@integer/default_prefs_grid_height"
            app:key="grid_height"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/preferences_grid_height_summary"
            app:title="@string/preferences_grid_height_title" />

    </PreferenceCategory>

</PreferenceScreen>